Java-21/25-Migration: die zwei Stellen, die ab Java 9 nicht mehr übersetzen
YanelServlet: sun.misc.BASE64Decoder gibt es seit Java 9 nicht mehr
(verifiziert: unter Zulu 8 vorhanden, unter Temurin 21 ClassNotFound-
Exception). Ersetzt durch java.util.Base64.getMimeDecoder(), das wie der
alte Decoder alle Zeichen ausserhalb des Base64-Alphabets ignoriert; das
Encoding ist neu explizit UTF-8 statt der Plattform-Vorgabe, was auf PROD
denselben Wert ergibt (file.encoding=UTF-8).

Dabei entfernt: log.debug("Username and Password Decoded: " + ...) hat
Benutzername UND Passwort im Klartext ins Log geschrieben.

XinhaResource: import sun.util.logging.resources.logging war ein
versehentlicher IDE-Auto-Import, die Klasse wird im File nirgends
benutzt; ab Java 9 ist das Paket nicht mehr sichtbar.

Gemessen mit javac --release 8 und --release 21 über alle 341
Quelldateien: vorher 371 Fehler und 3 davon nur unter 21, nachher 368
Fehler und 0 nur unter 21. Die verbleibenden 368 treten unter beiden
Versionen gleich auf (fehlende GWT-/Cocoon-Jars im Prüf-Klassenpfad) und
sind kein Java-Versionsproblem.